[refactor]增加部分注释；删除冗余代码

--- a/DCGAN-test/DCGAN-label2image.ipynb
+++ b/DCGAN-test/DCGAN-label2image.ipynb
@@ -51,15 +51,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "# prepare dataset\n",
     "\n",
     "path = {\n",
     "    'datasets': os.path.join(os.getcwd(), 'datasets'), \n",
-    "    'models': os.path.join(os.getcwd(), 'models-DCGAN-test'),\n",
+    "    'models': os.path.join(os.getcwd(), 'models'),\n",
     "    'outputs_aux': os.path.join(os.getcwd(), 'outputs_aux')\n",
     "}\n",
     "\n",
@@ -83,18 +96,6 @@
     "    'train': torchvision.datasets.MNIST(train=True, **params['datasets']), \n",
     "    'test': torchvision.datasets.MNIST(train=False, **params['datasets']), \n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "if not os.path.exists(path['models']):\n",
-    "    os.mkdir(path['models'])"
    ]
   },
   {
@@ -621,13 +622,10 @@
     "    \n",
     "    def forward(self, x, training=True):\n",
     "        x = self.bn00(self.deconv00(x))\n",
-    "#         print('deconv0: ', x.data.size())\n",
     "        x = F.leaky_relu(x, negative_slope=.2)\n",
     "        x = self.bn01(self.deconv01(x))\n",
-    "#         print('deconv1: ', x.data.size())\n",
     "        x = F.leaky_relu(x, negative_slope=.2)\n",
     "        x = self.deconv02(x)\n",
-    "#         print('deconv2: ', x.data.size())\n",
     "        output = F.tanh(x)\n",
     "        \n",
     "        return output"
@@ -765,6 +763,10 @@
    "outputs": [],
    "source": [
     "def gen_noise(ys, batch_size=batch_size, input_dim=input_dim):\n",
+    "    \"\"\"\n",
+    "        ys 只要是一组数字组成的可迭代对象即可，如一个数字列表： [0, 1, 9, 7, 5]\n",
+    "        输出的对象是 torch.LongTensor 对象，需要经过 Varaiable() 处理后才能喂给网络\n",
+    "    \"\"\"\n",
     "    noise = np.random.randn(batch_size, input_dim, 1, 1)\n",
     "\n",
     "    new_noise = []\n",
@@ -1425,14 +1427,6 @@
     "netD = ModelD().cuda() if use_cuda else ModelD()\n",
     "netD.apply(weight_init)\n",
     "optD = torch.optim.SGD(netD.parameters(), lr=0.0002)#, lr=0.0002,betas=(0.5,0.999))\n",
-    "\n",
-    "# inputs...\n",
-    "\n",
-    "# noise = Variable(torch.FloatTensor(batch_size, 1, 1, 1))\n",
-    "# fixed_noise = torch.from_numpy(np.random.choice(n_class-1, batch_size))\n",
-    "# fixed_noise = fixed_noise.view(batch_size, 1, 1, 1)\n",
-    "\n",
-    "# noise, fixed_noise = (noise.cuda(), fixed_noise.cuda()) if use_cuda else (noise, fixed_noise)    \n",
     "    \n",
     "\n",
     "# loss...\n",
@@ -1465,17 +1459,10 @@
     "        error_real.backward() # BP 01 -> netD\n",
     "        \n",
     "        # 2. Generate pic\n",
-    "#         noise = torch.FloatTensor(batch_size, input_dim, 1, 1)\n",
-    "#         noise = torch.normal(torch.zeros(label_shape), torch.ones(label_shape))\n",
-    "#         noise = (noise + ys.type(torch.FloatTensor).data) / 10.0\n",
-    "#         noise = Variable(noise)\n",
-    "#         noise = noise.unsqueeze(1).expand(noise.size()[0], input_dim)\n",
-    "#         noise.data.resize_(noise.data.size()[0], input_dim, 1, 1)\n",
     "        noise = Variable(gen_noise(ys))\n",
     "        noise.data = noise.data.cuda() if use_cuda else noise.data #gpu transform\n",
     "        fake_pic = netG(noise).detach()\n",
     "        output2 = netD(fake_pic)\n",
-    "#         label = Variable(torch.zeros(label_shape).type(label_type))\n",
     "        label = Variable(torch.from_numpy(np.array([n_class-1] * label_shape[0])).type(label_type))\n",
     "        error_fake = criterion(output2, label)\n",
     "        error_fake.backward()\n",
@@ -1483,25 +1470,14 @@
     "        optD.step() # start to optimize: Discriminator\n",
     "        \n",
     "        # train Generator alone:\n",
-    "#         error_G = Variable(torch.zeros(1))\n",
     "        if (error_G is None) or (np.random.rand() < threshold):\n",
     "            optG.zero_grad()\n",
     "            netG.train()\n",
-    "#             noise = torch.normal(torch.zeros(label_shape), torch.ones(label_shape))\n",
-    "#             noise = (noise + ys.type(torch.FloatTensor).data) / 10.0\n",
-    "#             noise = Variable(noise)\n",
-    "#             noise = noise.unsqueeze(1).expand(noise.size()[0], input_dim)\n",
-    "#             noise.data.resize_(noise.data.size()[0], input_dim, 1, 1)\n",
     "            noise = Variable(gen_noise(ys))\n",
     "            noise.data = noise.data.cuda() if use_cuda else noise.data #gpu transform\n",
     "            fake_pic = netG(noise)\n",
     "            output3 = netD(fake_pic)\n",
-    "#             if use_cuda:\n",
-    "#                 m_v,m_i = torch.max(output3.cpu(), 1)\n",
-    "#             else:\n",
-    "#                 m_v,m_i = torch.max(output3, 1)\n",
-    "#             if m_i.numpy() < (n_class-1):\n",
-    "#                 print('good')            \n",
+    "          \n",
     "            error_G = criterion(output3, ys.type(label_type))\n",
     "            error_G.backward()\n",
     "            optG.step() # start to optimize: Generator\n",
@@ -1510,9 +1486,6 @@
     "        results.append([float(error_D.data.numpy()), float(error_G.data.numpy())])\n",
     "        \n",
     "        if batch_idx % 100 == 0:\n",
-    "#             print('output:', output.cpu().data if use_cuda else output.data)\n",
-    "#             print('output2:', output2.cpu().data if use_cuda else output2.data)\n",
-    "#             print('error_real: {} \\t error_fake: {}'.format(error_real, error_fake))\n",
     "            print ('第{}周期，第{}/{}撮, 分类器Loss:{:.2f}, 生成器Loss:{:.2f}'.format(\n",
     "                epoch,batch_idx,len(dataloader['train']), error_D.data[0], error_G.data[0]))\n",
     "            \n",
@@ -1589,6 +1562,51 @@
     "plt.xlabel('Step')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 如果需要载入已有模型\n",
+    "\n",
+    "\n",
+    "# 先创建网络\n",
+    "netD = ModelD()\n",
+    "netG = ModelG()\n",
+    "\n",
+    "\n",
+    "# 再载入模型\n",
+    "path_D = os.path.join(path['models'], 'netD_epoch_99')\n",
+    "netD.load_state_dict(torch.load(path_D))\n",
+    "\n",
+    "path_G = os.path.join(path['models'], 'netG_epoch_99')\n",
+    "netG.load_state_dict(torch.load(path_G))\n",
+    "\n",
+    "# 防止错误 tensors are on different GPUs\n",
+    "\n",
+    "netD = netD.cuda() if use_cuda else netD\n",
+    "netG = netG.cuda() if use_cuda else netG\n",
+    "\n",
+    "# 创建待绘制的数字序列\n",
+    "\n",
+    "ys = [np.random.randint(0, 10) for i in range(batch_size)]\n",
+    "ys = torch.from_numpy(np.array(ys))\n",
+    "ys = ys.cuda() if use_cuda else ys  # 防止错误 tensors are on different GPUs\n",
+    "ys = Variable(ys)"
    ]
   },
   {
